--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,23 +1,15 @@
 <idea-plugin>
-
-    <!-- Unique id for this plugin. Must stay constant for the life of the plugin. -->
     <id>com.pagero.SkunkSupport</id>
-
-    <!-- Text to display as name on Settings | Plugin page -->
     <name>Pagero Skunk Interpolation</name>
-
     <version>3.0</version>
-
-    <!-- Text to display as company information on Settings | Plugin page -->
     <vendor>Pagero</vendor>
-
     <idea-version since-build="2018.1.0" until-build="2024.3"/>
 
     <!-- Product and plugin compatibility requirements -->
+<!--    <depends>org.intellij.scala</depends>-->
 <!--    <depends>com.intellij.modules.platform</depends>-->
 <!--    <depends>org.jetbrains.plugins.scala.lang.macros.evaluator.ScalaMacroExpandable</depends>-->
 
-    <!-- Text to display as description on Settings | Plugin page -->
     <description>This provides type inference for skunk macros</description>
     <change-notes>
         <![CDATA[
@@ -27,9 +19,9 @@
       </ul>
     ]]>
     </change-notes>
-
     <extensions>
-        <skunkSupport implementation="com.pagero.SkunkSupport"/>
+        <applicationService
+                serviceInterface="org.jetbrains.plugins.scala.lang.macros.evaluator.ScalaMacroExpandable"
+                serviceImplementation="com.pagero.SkunkSupport"/>
     </extensions>
-
 </idea-plugin>
