--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,7 @@
     <change-notes>
         <![CDATA[
       <ul>
+        <li><b>1.0.0</b> Create plugin.xml</li>
         <li><b>3.0</b> Bumped until-build to 2024.3, changed versioning scheme</li>
         <li><b>0.1.0</b> Initial fork, bumped until-build to 2023.3</li>
       </ul>
